GüncelUretim planlama sayfasına başlandı. Güncel viewlar

--- a/NOVA/Views/IsEmri/IsEmriPartials/IsEmri_TP.cshtml
+++ b/NOVA/Views/IsEmri/IsEmriPartials/IsEmri_TP.cshtml
@@ -1,6 +1,6 @@
-﻿<table class="table table-bordered border-dark" id="TPTable" style="display:none">
+﻿<table class="table" id="TPTable" style="display:none">
     <tbody>
-        <tr id="th" style="background-image: linear-gradient(to right, #E0EAFC 0%, #CFDEF3 51%, #E0EAFC 100%);">
+        <tr id="th">
             <th class=""></th>
             <th class="text-center" style="font-size: 11px;">MAKİNE</th>
             <th class="text-center" style="font-size: 11px;">STOK ÖLÇÜLERİ</th>
@@ -16,7 +16,7 @@
         <tr>
             <td class="text-center p-1">1</td>
 
-            <td class="border-0 text-center p-1 w-auto">
+            <td class="text-center p-1 w-auto">
                 <select class="js-select tp-makineler" style="width:150px" onchange="MachineChange(this, 'TPTable')">
                     <option selected disabled>SEÇİNİZ</option>
                     <option value="TP01">TP01</option>
@@ -37,7 +37,7 @@
 
             <td style="background-color:white;border-bottom:hidden;border-top:hidden;width:1px"></td>
 
-            <td class="text-center p-1" style="display:flex;justify-content:center;align-items:center;border:none;">
+            <td class="text-center p-1" style="display:flex;justify-content:center;align-items:center">
                 <i onclick="ReferansSecimiTemizle(this, 'TP')" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Seçimi Temizle</span>" class="bi bi-x-lg me-2" style="color:#203289;font-size:larger;display:none;cursor:pointer;"></i>
                 <select class="js-select tp-referans-makineler" style="width:150px" onchange="ReferansMakinesiSecimi(this, 'TP')">
                     <option selected disabled>SEÇİNİZ</option>
