--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -711,6 +711,12 @@
         });
     }
 
+//    EFC200000001342	1200	DX51D	Z100 A	11.340,00	1,00	1,80	2410G00288
+
+//RULO SAC KODU	BOBİN NO	KONUM	RENK KODU	KALİTE	KAPLAMA	KALINLIK (MM)	GENİŞLİK (MM)	ADET	TONAJ (KG)	KAYDI YAPAN	AÇIKLAMA	MENŞEİ	STOK SAHASI	RULO-BANTGİRİŞ TARİHİ
+
+//EFC200000004380	FHA23121715B		RAL 3009	DX51D	Z15	0,43	1000	1	8.700	YSM		GALEX	MANİSA FABRİKA	01.04.2024
+
     async function ExceleKopyala(SiparisNo, BelgeNo, StokKodu, GirisDepo, CikisDepo) {
         var Filtered = [];
 
