--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -173,6 +173,12 @@
 
     <div class="card mx-auto" style="font-size:12px">
 
+
+
+
+
+
+
         <div class="card-body">
             @*<div class="centercontent" id="content" style="display:unset">
                     <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
@@ -318,8 +324,8 @@
                 $('#table').bootstrapTable("destroy");
                 $('#table').bootstrapTable({ data: data })
             }).done(function () {
-                document.querySelectorAll('input[type="search"]')[0].onkeyup = function (e) {
-                    document.querySelectorAll('input[type="search"]')[0].value = e.currentTarget.value.toLocaleUpperCase('TR');
+                document.querySelectorAll('.search-input')[0].onkeyup = function (e) {
+                    document.querySelectorAll('.search-input')[0].value = e.currentTarget.value.toLocaleUpperCase('TR');
                 };
                 for (let i = 0; i < detayli.length; i++) {
                     if (!teslimfilter.includes(detayli[i].TESLIM_YERI)) {
