--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -2,6 +2,8 @@
     string ProfilePhotoPath = Request.Cookies["Id"].Value + ".png";
 }
 
+<link href="~/assets/boxicons/css/boxicons.css" rel="stylesheet" />
+
 <style>
 
     :root {
