--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html style="overflow:hidden">
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
@@ -10,33 +10,23 @@
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="~/wwwroot/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-   
+    <link href="~/wwwroot/libs/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/wwwroot/libs/boxicons/css/boxicons.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
-    @*<link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
-        <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />*@
     <link href="~/Scripts/floating-labels.min.css" rel="stylesheet" />
-    <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
-    <link href="~/Scripts/select2.css" rel="stylesheet" />
-    <link href="~/assets/vendor/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
-
-    <link href="~/assets/css/printjs.min.css" rel="stylesheet" />
-    <script src="~/assets/js/printjs.min.js"></script>
+<link href="~/wwwroot/libs/select2/css/select2.css" rel="stylesheet" />
     <link href="~/Scripts/bootstrap-table.min.css" rel="stylesheet" />
 
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
-    <script src="~/Scripts/select2.min.js"></script>
     <script src="~/Scripts/tippy/popper.min.js"></script>
-    <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
     <script src="~/assets/sweetalert/sweetalert.js"></script>
     <script src="~/Scripts/fuse.js"></script>
+    <script src="~/wwwroot/libs/axios/axios.js"></script>
     <style>
         .bootstrap-table .table > tbody > tr.group-by.expanded,
         .bootstrap-table .table > tbody > tr.group-by.collapsed {
@@ -55,7 +45,6 @@
             display: flex;
             flex-wrap: wrap;
             margin-bottom: 30px;
-            overflow: hidden;
             padding: 30px 15px 15px;
             position: relative
         }
@@ -205,9 +194,7 @@
             <div id="divPartial">
                 @Html.Partial("_Layout_menu")
             </div>
-            <div id="divPartial2" style="display:none">
-                @Html.Partial("_Layout_menu2")
-            </div>
+
 
             <div class="layout-page" style="padding-left:0 !important">
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
@@ -248,18 +235,12 @@
 
                 @RenderBody()
 
-                @*<div class="foot" style="position:absolute;bottom:0;right:0;left:0;">
-                        <div class="text-center">
-                            ©
-                            <script>document.write(2022);</script>, designed by
-                            <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
-                        </div>
-                    </div>*@
+
 
             </div>
         </div>
     </div>
-
+   
     <div class="layout-overlay layout-menu-toggle"></div>
     <script src="~/Scripts/tableExport.min.js"></script>
     <script src="~/Scripts/bootstrap-table.min.js"></script>
@@ -274,10 +255,8 @@
     <script src="~/jsPDF/polyfills.umd.min.js"></script>
     <script src="~/Scripts/xlsx.core.min.js"></script>
     <script src="~/Scripts/moment-with-locales.min.js"></script>
-    @*<script src="https://unpkg.com/html5-qrcode"></script>*@
-
-    <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
-    <script type="text/javascript" src="/assets/js/main.js"></script>
+<script src="~/wwwroot/libs/select2/js/select2.js"></script>
+    
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
 
 
