--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporuBelgeList_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporuBelgeList_Modal.cshtml
@@ -195,16 +195,12 @@
         var EditedData = [];
 
         for (var i = 0; i < DetailFilteredList.length; i++) {
-
-            var detail = GetSiparisDetails().filter(d => d.STOK_KODU == DetailFilteredList[i].STOK_KODU);
-
-            if (detail.length > 0) {
                 var Item =
                 {
                     "ACTIVE": DetailFilteredList[i].ACTIVE,
                     "STOK_KODU": DetailFilteredList[i].STOK_KODU,
-                    "IRS_NO": detail[0].IRS_NO,
-                    "STOK_ADI": detail[0].STOK_ADI,
+                    "IRS_NO": DetailFilteredList[i].IRS_NO,
+                    "STOK_ADI": DetailFilteredList[i].STOK_ADI,
                     "SERI_NO": DetailFilteredList[i].SERI_NO,
                     "MIKTAR1": DetailFilteredList[i].MIKTAR1.toFixed(2),
                     "OLCU_BR1": DetailFilteredList[i].OLCU_BR1,
@@ -220,7 +216,6 @@
                 };
 
                 EditedData.push(Item);
-            }
         }
 
         EditedData.sort((a, b) => {
